--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>h2</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
