--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=create
 
+secutiry.jwt.signing-key=dGVzdGUgcGFyYSBjdXJzbyBzcHJpbmcgYW5ndWxhcg==
+
 
